fixed horizontal scroll

--- a/src/Components/Main/MainView/MainView.scss
+++ b/src/Components/Main/MainView/MainView.scss
@@ -87,10 +87,7 @@ main {
 }
 
 .track-horizontal {
-    display: flex;
-    justify-content: center;
-    height: 6px;
-    border-radius: 3px;
+    display: none;
 }
 
 .track-horizontal .thumb-horizontal {
